spiced up the design

--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -3,13 +3,16 @@
 }
 
 body {
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-  color: #303030;
+  background: #34495e;
+  color: #ecf0f1;
   font-family: "Raleway", sans-serif;
   overflow: hidden;
   margin: 0;
 }
 main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   margin-inline-end: 0;
   width: 100vw;
@@ -18,52 +21,160 @@ main {
 
 .container {
   margin: 0 auto;
-  width: 45%;
+  width: 65%;
+}
+
+.container-inner {
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 75%;
   margin: 0 auto;
 }
 
-.text-box {
-  box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.35);
-  padding: 1rem 1rem 1rem 0.5rem;
-  margin: 0.2rem 0 1rem 0;
+.form-background {
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  max-width: 512px;
+  background: #505050;
+  border-radius: 20px;
+  padding: 1rem 0 2rem 0;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0px 15px rgba(0, 0, 0, 0.1) inset;
 }
 
-#submit {
-  padding: 1rem;
-  background-color: #dcd9d4;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.5) 0%,
-    rgba(0, 0, 0, 0.5) 100%
-  ),
-    radial-gradient(
-    at 50% 0%,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(0, 0, 0, 0.5) 50%
-  );
-  background-blend-mode: soft-light, screen;
-  padding: 1rem 0.5rem;
-  text-align: center;
-  box-shadow: 0px 4px 0px #dcd9d4, 0px 3px 5px rgba(0, 0, 0, 0.4),
-    inset 0px 1px 0px rgba(255, 255, 255, 0.3),
-    inset 0px 0px 3px rgba(255, 255, 255, 0.5);
-  cursor: pointer;
-  user-select: none;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 10px;
-  transition: 100ms ease-in-out;
+label,
+p {
+  margin: 0.3rem 0 0.2rem 0;
 }
 
 input {
   border-radius: 10px;
   border: none;
   outline: none;
+}
+
+.error {
+  color: #E74C3C;
+  font-size: .7rem;
+  font-family: 'Roboto Mono', monospace;
+}
+.error::before {
+  content: "** "
+}
+.error::after {
+  content: " **"
+}
+
+.text-box {
+  box-shadow: inset 0px 2px 10px -2px rgba(0, 0, 0, 0.7);
+  padding: 0.625rem 1rem 0.625rem 0.5rem;
+  font-size: 1rem;
+}
+
+.gender {
+  margin: 0 1rem 0 0.3rem;
+}
+
+#submit {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  padding: 0.5rem 1rem;
+  margin-top: 2rem;
+  cursor: pointer;
+  border: 1px solid #bbb;
+  overflow: visible;
+  font-size: 1.5rem;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #333;
+  background-color: #ddd;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(255, 255, 255, 1)),
+    to(rgba(255, 255, 255, 0))
+  );
+  transition: background-color 0.2s ease-out;
+  background-clip: padding-box; /* Fix bleeding */
+  border-radius: 7px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3), 0 2px 2px -1px rgba(0, 0, 0, 0.2),
+    0 1px 0 rgba(255, 255, 255, 0.3) inset;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
+  user-select: none;
+}
+#submit:hover {
+  background-color: #eee;
+  color: #555;
+}
+#submit:active {
+  background: #e9e9e9;
+  position: relative;
+  top: 1px;
+  text-shadow: none;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) inset;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) inset;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) inset;
+}
+
+.range {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 100%;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+.range-value {
+  margin-top: 0;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  background: #3498db;
+  height: 2px;
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-moz-range-track {
+  -moz-appearance: none;
+  background: #3498db;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid #3498db;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  max-width: 80px;
+  position: relative;
+  bottom: 11px;
+  background-color: #c0c0c0;
+  cursor: -webkit-grab;
+}
+
+input[type="range"]::-moz-range-thumb {
+  -moz-appearance: none;
+  border: 2px solid;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  max-width: 80px;
+  position: relative;
+  bottom: 11px;
+  background-color: #c0c0c0;
+  cursor: -moz-grab;
+  -moz-transition: border 1000ms ease;
+  transition: border 1000ms ease;
 }
