added weapon for progression

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Roboto Mono", sans-serif;
+  font-family: 'Press Start 2P', cursive;
   overflow-x: hidden;
   text-align: center;
   font-size: 2rem;
@@ -84,6 +84,13 @@ main {
   left: 0;
   color: #e7e5df;
   font-size: 3rem;
+}
+#weapon {
+  padding: 1rem 0 0 2rem;
+  top: 50%;
+  left: 0;
+  color: #e7e5df;
+  font-size: 1.2rem;
 }
 #reset {
   background-color: #707070;
