--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -76,7 +76,7 @@ button {
     background-color: white;
     font-family: questrial;
     justify-content: space-evenly;
-    height: 100%;
+    height: 500px;
     padding-bottom: 100px;
 }
 
@@ -112,11 +112,10 @@ h4 {
 }
 
 .foot {
+    height: 300px;
     display: flex;
     justify-content: flex-end;
-    
-    background-color: white;
-    
+    align-items: flex-end;
 }
 
 .foot > a {
@@ -124,7 +123,9 @@ h4 {
     text-decoration: none;
 }
     
-/* #footer-links > a {
+#footer-links > a {
     width: 400px;
     justify-content: space-evenly;
-} */
+}
+
+/* Cant figure out how to space out the bottom links */
