changed next-weapon to next-weapon-level

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -91,11 +91,10 @@ main {
   color: #e7e5df;
   font-size: 3rem;
 }
-#next-weapon {
+#next-weapon-level {
   position: absolute;
   padding: 1rem 0 0 2rem;
-  top: 60px;
-  left: 0;
+  top: 0;
   color: #e7e5df;
   font-size: 1rem;
 }
