--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -23,3 +23,64 @@ width: 100vw; height: 15vh; text-align: center
 button {
 width: 50vw; height: 12vh; background-color: #FF0; color: black; font-weight: bold; font-size: 25px; border-radius: 15px; outline: none;
 }
+
+/******************************* 
+Slider button Design 
+*******************************/
+
+a.trigger{
+    position: absolute;
+    background: green;
+    text-decoration: none;
+    font-size: 16px;
+    letter-spacing:-1px;
+    font-family: verdana, helvetica, arial, sans-serif;
+    color:#fff;
+    padding:4px 12px 6px 24px;
+    font-weight: bold;
+    z-index:2;
+  }
+  
+  a.trigger.right {
+    right: 0;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-topleft: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-top-left-radius: 5px;
+  }
+  a.trigger:hover {
+    background-color: black;
+  }
+  a.active.trigger {
+    background: #787878;
+  }
+  
+  .panel {
+    color: #4ea5cd;
+    position: absolute;
+    display: none;
+  
+    width: 250px;
+    height: auto;
+    z-index:1;
+    border: 1px solid;
+    border-color: #4ea5cd;
+  }
+  
+  .panel.right {
+    right: 00;
+    padding: 20px 50px 20px 30px;
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+    -moz-border-radius-bottomleft: 15px;
+    -moz-border-radius-topleft: 15px;
+    -webkit-border-bottom-left-radius: 15px;
+    -webkit-border-top-left-radius: 15px;
+  }
+  
+  .panel p {
+    font-size: 15px;
+    font: "Times New Roman", Times, serif;
+  }
