finished the items shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -231,7 +231,7 @@ body{
     color: red;
     cursor: pointer;
 }
-
+/* --- Inventory --- */
 #fullInventory{
     /* display: none; */
     display: flex;
@@ -242,7 +242,7 @@ body{
     height: 95vh;
     width:95vw;
     border: 2px solid rgb(255, 0, 0);
-    background-image: linear-gradient(rgba(13, 29, 63, 1), rgba(255, 255, 255, 0));
+     background-image: linear-gradient(rgb(13, 29, 63), rgb(108, 141, 248));
     box-shadow: 5px 5px 10px black;
 }
 
@@ -268,6 +268,258 @@ body{
     display: flex;
     flex-direction: column;
 }
+.inventoryItem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.innerInventoryItem{
+    width: 104px;
+    height: 104px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    border: 1px solid black;
+    font-weight: bolder;
+}
+.bamboo{
+    background-image: url("../img/materials/itemBamboo.png");
+    background-size: 100% 100%;
+}
+.jute{
+    background-image: url("../img/materials/itemJute.png");
+    background-size: 100% 100%;
+}
+.palmLeaf{
+    background-image: url("../img/materials/itemPalmLeaf.png");
+    background-size: 100% 100%;
+}
+.wood{
+    background-image: url("../img/materials/itemWood.png");
+    background-size: 100% 100%;
+}
+.lianaVine{
+    background-image: url("../img/materials/itemLiana.png");
+    background-size: 100% 100%;
+}
+.resin{
+    background-image: url("../img/materials/itemResin.png");
+    background-size: 100% 100%;
+}
+.stone{
+    background-image: url("../img/materials/itemStone.png");
+    background-size: 100% 100%;
+}
+.iron{
+    background-image: url("../img/materials/itemOreIron.png");
+    background-size: 100% 100%;
+}
+.fireWood{
+    background-image: url("../img/items/outpost/itemFirewood.png");
+    background-size: 100% 100%;    
+}
+.stoneBlock{
+    background-image: url("../img/items/querry/itemStoneBlock.png");
+    background-size: 100% 100%;    
+}
+.driedJute{
+    background-image: url("../img/items/huntersTent/itemDryJute.png");
+    background-size: 100% 100%;    
+}
+.torch{
+    background-image: url("../img/items/huntersTent/itemTorch.png");
+    background-size: 100% 100%;    
+}
+.jackPlane{
+    background-image: url("../img/items/woodWorkshop/itemJackPlane.png");
+    background-size: 100% 100%;
+}
+.bucket{
+    background-image: url("../img/items/woodWorkshop/itemBucket.png");
+    background-size: 100% 100%;
+}
+.plank{
+    background-image: url("../img/items/woodWorkshop/itemPlank.png");
+    background-size: 100% 100%;
+}
+.rope{
+    background-image: url("../img/items/woodWorkshop/itemRope.png");
+    background-size: 100% 100%;
+}
+.ropeLadder{
+    background-image: url("../img/items/woodWorkshop/itemRopeLadder.png");
+    background-size: 100% 100%;
+}
+.mat{
+    background-image: url("../img/items/weaver/itemMat.png");
+    background-size: 100% 100%;
+}
+.wickerBasket{
+    background-image: url("../img/items/weaver/itemWickerBasket.png");
+    background-size: 100% 100%;
+}
+.woodenLattice{
+    background-image: url("../img/items/weaver/itemWoodenLattice.png");
+    background-size: 100% 100%;
+}
+.ceramicLantern{
+    background-image: url("../img/items/Pottery/itemCeramicLantern.png");
+    background-size: 100% 100%;
+}
+.ceramicPot{
+    background-image: url("../img/items/Pottery/itemCeramicPot.png");
+    background-size: 100% 100%;
+}
+.cog{
+    background-image: url("../img/items/smithy/itemAncientGear.png");
+    background-size: 100% 100%;
+}
+.lampOil{
+    background-image: url("../img/items/smithy/itemLampOil.png");
+    background-size: 100% 100%;
+}
+.glassBottle{
+    background-image: url("../img/items/glassBlowing/itemBottle.png");
+    background-size: 100% 100%;
+}
+.lense{
+    background-image: url("../img/items/glassBlowing/itemLens.png");
+    background-size: 100% 100%;
+}
+.string{
+    background-image: url("../img/items/loom/itemThread.png");
+    background-size: 100% 100%;
+}
+.cloth{
+    background-image: url("../img/items/loom/itemFabric.png");
+    background-size: 100% 100%;
+}
+/* --- Build the items grid -- */
+.itemGrid1{
+    grid-area: item1;
+}
+
+.itemGrid2{
+    grid-area: item2;
+}
+
+.itemGrid3{
+    grid-area: item3;
+}
+
+.itemGrid4{
+    grid-area: item4;
+}
+
+.itemGrid5{
+    grid-area: item5;
+}
+
+.itemGrid6{
+    grid-area: item6;
+}
+
+.itemGrid7{
+    grid-area: item7;
+}
+
+.itemGrid8{
+    grid-area: item8;
+}
+
+.itemGrid9{
+    grid-area: item9;
+}
+
+.itemGrid10{
+    grid-area: item10;
+}
+
+.itemGrid11{
+    grid-area: item11;
+}
+
+.itemGrid12{
+    grid-area: item12;
+}
+
+.itemGrid13{
+    grid-area: item13;
+}
+
+.itemGrid14{
+    grid-area: item14;
+}
+
+.itemGrid15{
+    grid-area: item15;
+}
+
+.itemGrid16{
+    grid-area: item16;
+}
+
+.itemGrid17{
+    grid-area: item17;
+}
+
+.itemGrid18{
+    grid-area: item18;
+}
+
+.itemGrid19{
+    grid-area: item19;
+}
+
+.itemGrid20{
+    grid-area: item20;
+}
+
+.itemGrid21{
+    grid-area: item21;
+}
+
+.itemGrid22{
+    grid-area: item22;
+}
+
+.itemGrid23{
+    grid-area: item23;
+}
+
+.itemGrid24{
+    grid-area: item24;
+}
+
+.itemGrid25{
+    grid-area: item25;
+}
+
+.itemGrid26{
+    grid-area: item26;
+}
+.itemGrid27{
+    grid-area: item27;
+}
+.itemGrid28{
+    grid-area: item28;
+}
+.itemsGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    height: 100%;
+    width: 100%;
+    grid-template-areas:
+    "item1 item2 item3 item4 item5"
+    "item6 item7 item8 item9 item10"
+    "item11 item12 item13 item14 item15"
+    "item16 item17 item18 item19 item20"
+    "item21 item22 item23 item24 item25"
+    "item26 item26 item27 item28 item28";
+    overflow: scroll;
+}
 
 .fullInventoryTitle{
     width: 100%;
@@ -280,7 +532,6 @@ body{
     font-weight: bolder;
     color: white;
 }
-
 /* --- Main Container and Children --- */
 .mainGameContainer{
     position: absolute;
