Tweaked Portfolio, added target blank to links to open in new tab

--- a/portfolio/css/projectsstyle.css
+++ b/portfolio/css/projectsstyle.css
@@ -42,6 +42,12 @@ nav {
   margin: 15px;
 }
 
+#projectsnav {
+  background-color: rgba(0,0,0,0.8);
+  border-radius: 5px;
+  width: 250px;
+}
+
 nav>ul {
   display: flex;
   flex-direction: row;
@@ -68,7 +74,7 @@ main > nav > ul > li > a{
   font-weight: bold;
 }
 main > nav > ul > li > a:hover{
-  color:orange;
+  color:#f75252;
   transition: all 0.5s ease-in-out;
 }
 
