finished the boat shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -269,6 +269,8 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;    
 }
 .inventoryItem{
     display: flex;
@@ -556,6 +558,8 @@ body{
     background-image: url("../img/items/special/itemWaterMechanism.png");
     background-size: 100% 100%;
 }
+/* --- Boat ---*/
+
 
 /* --- Main Container and Children --- */
 .mainGameContainer{
