finished the advanced inventory shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -272,6 +272,11 @@ body{
     justify-content: space-between;
     align-items: center;    
 }
+.storage{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .inventoryItem{
     display: flex;
     justify-content: center;
