finished the advanced inventory shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -564,7 +564,25 @@ body{
     background-size: 100% 100%;
 }
 /* --- Boat ---*/
+.haul{
+    background-image: url("../img/items/boat/haul.png");
+    background-size: 100% 100%;
+}
 
+.mast{
+    background-image: url("../img/items/boat/mast.png");
+    background-size: 100% 100%;
+}
+
+.sails{
+    background-image: url("../img/items/boat/sail.png");
+    background-size: 100% 100%;
+}
+
+.rudder{
+    background-image: url("../img/items/boat/rudder.png");
+    background-size: 100% 100%;
+}
 
 /* --- Main Container and Children --- */
 .mainGameContainer{
