finished the advanced inventory shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -233,8 +233,8 @@ body{
 }
 /* --- Inventory --- */
 #fullInventory{
-    /* display: none; */
-    display: flex;
+    display: none;
+    /* display: flex; */
     flex-direction: row;
     position: absolute;
     top: 0;
