--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -5,23 +5,6 @@ body {
   width: 100%;
 }
 
-/* .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-  border: 2px red solid;
-} */
-
-/* #form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-  border: red 1px solid;
-
-} */
-
 .container {
   color: #a3ffe3;  
   font-size: 1.5em;
@@ -43,13 +26,7 @@ body {
   justify-content: space-between;
 }
 
-.clicky {
-  width: 400px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
+
 
 button {
   width: 100px;
@@ -57,31 +34,139 @@ button {
 }
 
 input {
-  width: 100px;
+  width: 200px;
+  background-color: #a3ffe3;
+  color: grey;
+  border: #a3ffe3 2px solid;
+  border-radius: 5px;
+  font-size: .5em;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.clickbox {
+.connect {
+  height: 100px;
   width: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contype {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 150px;
+  margin-top: 30px;
+
+}
+
+.contype input {
+  width: 20px;
+  margin-top: 8px;
+}
+
+.contact input {
+  width: 20px;
+}
+
+/* contact check boxes */
+.clickbox {
+  height: 100px;
+  width: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 150px;
+  margin-top: 30px;
+
+}
+
+.contact input {
+  width: 20px;
+  margin-top: 8px;
+}
+
+.contact input {
+  width: 20px;
+}
+
+.contact input .checkbox {
+  width: 20px;
+  border: red 2px solid;
+}
+
+.slidecontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* Width of the outside container */
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 90%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #a3ffe3; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #a3ffe3; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.clickycontainer {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.clicky {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 
-.selectone {
-  width: 150px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.clicky button {
+  background-color: #a3ffe3;
+  color: gray;
+  border-radius: 5px;
+  height: 40px;
+  width: 120px;
+  font-size: .6em;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.reason {
-  width: 150px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.label {
-  ;
-}
