--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -5,7 +5,31 @@ body{
     display:flex;
     flex-direction:column;
     text-align:left;
-    width:600px;
     background-color:aliceblue;
+    line-height: 3em;
+    width:300px;
 }
-.error {color:red}
+#innercontainer{
+    display:flex;
+    flex-direction:column;
+
+}
+#leftside{
+    display:flex;
+    flex-direction:column;
+
+}
+#rightside{
+    display:flex;
+    flex-direction:column;
+    /* text-align: center;
+    justify-items: center;
+    align-items: center; */
+
+}
+input{
+    border-radius: 2px;
+    border:none;
+    width:200px;
+}
+.error {color:rgb(4, 0, 255)}
