--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -2,7 +2,7 @@ nav {
   text-align: center;
   padding: 30px;
   background-color: lightblue;
-}
+  }
 
 body {
     font-family: Arial;
@@ -10,21 +10,25 @@ body {
   }
   
 
-  header {
+header {
     padding: 20px;
     font-size: 30px;
     text-align: center;
   }
 
-  .post {
-    height: auto;
+.post {
     border: solid rgb(173, 216, 230) 2px;
     padding: 20px;
     overflow-y: auto;
   }
 
+.post p {
+    float: right;
+    width: 500px;
+    padding-right: 50px;
+  }
 
-  .blog-pic{
+.blog-pic{
     float: left;
     width: 600px;
   }
@@ -32,7 +36,8 @@ body {
 p:hover:first-letter { 
   font-size: 200%;
   color: #8A2BE2;
-
+  }
+  
 h2 {
   text-decoration: underline rgb(173, 216, 230);
-}
+  }
