added files to main index.html file on workbook

--- a/06week/Checkpoint2/css/style.css
+++ b/06week/Checkpoint2/css/style.css
@@ -69,17 +69,21 @@ form {
 }
 
 .objective {
-  height: 600px;
-  width: 75vw;
+  height: 200px;
+  width: 25vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 0;
-  margin-top: 0;
+  padding-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 50px;
   font-size: 25;
   font-family: 'Charmonman', cursive;
   font-family: 'Lobster', cursive;
+  border: 1px black solid;
+  border-radius: 15px;
   
 }
 
@@ -107,17 +111,20 @@ form {
 }
 
 .experience {
-  height: 600px;
-  width: 75vw;
+  height: 200px;
+  width: 25vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 0;
+  padding-left: 20px;
   margin-top: 0;
   font-size: 25;
   font-family: 'Charmonman', cursive;
   font-family: 'Lobster', cursive;
+  border: 1px black solid;
+  border-radius: 15px;
 }
 
 
