--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -761,7 +761,7 @@ body {
   height: 252px;
 }
 
-.potery{
+.pottery{
   background-image: url("../img/construction/objBuildPotteryWorkshop.png");
   background-size: 100% 100%;
   width: 315px;
